2016/11/26構築分（テスト環境）

--- a/notTidyHpInfo/html/subpages001/pages/c003/c003tab000.html
+++ b/notTidyHpInfo/html/subpages001/pages/c003/c003tab000.html
@@ -8,69 +8,59 @@
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
-<h1>CentOSインストールをやってみよう</h1>
+最終更新日付：2016/11/26（土）
+<h1>ローカル環境構築例</h1>
 <!--
 <ul>
 <li>全体サイズとしては3000文字が目安
 <li>タイトルは28文字以内
 <li>キーワードプランナーを使用
 </ul>
+<img/>
 <h2>問題提起</h2>
 <h2>解決策提起</h2>
 <h2>解決策根拠</h2>
+<ul>
+<li> 前提として、CentOS6.5 の構築後の作業
+<li> 参考はこちら
+  <ul>
+  <li>http://futurismo.biz/archives/1348
+  </ul>
+<pre class="brush: bash;">
+</pre>
+</ul>
  -->
-<!-- ------------------------------------------------------------------------------- -->
-<h2>インストール</h2>
 
-<h3>デフォルトインストール</h3>
-基本的には以下の参照URLを見てデフォルトで進める。参考にしたURLは以下のような感じです。
-<ul>
-<li>http://d.hatena.ne.jp/yamap_55/20130111/1357915410
-<li>http://d.hatena.ne.jp/akihito_sado/20120226
-</ul>
-
-<h3>遭遇したエラー</h3>
-以下のようなメッセージに遭遇
-<pre class="brush: bash;">
-NET: Registered protocol family 2
-</pre>
-対応方法は以下のURLを参照するとうまくいく。<br>
-ACPIを有効化、IO ACPIを有効化にチェックを入れるとうまくいった。
-<ul>
-<li>http://m97087yh.seesaa.net/pages/user/m/article?article_id=129774237
-</ul>
-
-<!-- ------------------------------------------------------------------------------- -->
-<h2>ssh 作成</h2>
-以下のコマンドを実行する
-<pre class="brush: bash;">
-$ yum list installed lgrep sudo
-$ su -
-# visudo
-------
-a   ALL=(ALL)   ALL  ※追加%wheel ALL=(ALL)   ALL   ※コメントを外す
-------
-</pre>
-
-<!-- ------------------------------------------------------------------------------- -->
-<h2>操作系問題</h2>
-2画面以上で操作されている場合、メイン画面以外ではマウスがまともに動かない様子 - GUIとCUIの切り替え
-<ul>
-<li>http://m97087yh.seesaa.net/pages/user/m/article?article_id=129774237
-</ul>
-(ちょっとメモ)/etc/inittab → 3 に変更で、CUIとなる。
+ここではとりあえず、管理人が、VirtualBoxを駆使してローカルに様々なサーバを構築した記録を残します。<br/>
+アーキテクチャといえば大袈裟ですが、とりあえず、細かい構築内容は別ページに譲るとして以下の図に残します。<br/>
 
 
-<!-- ------------------------------------------------------------------------------- -->
-<h2>小見出し</h2>
-本文
+<!--===============================================================================================================-->
+<h2>全体構成</h2>
+<img border="0" src="../../../../images/c003tab000_001.png" >
+
+<!-- テーブル -->
+<table class="type07" width="50%">
+<thead>
+<tr><th scope="cols">サーバ名</th><th scope="cols">アドレス</th><th scope="cols">アクセス</th></tr>
+</thead>
+<tbody>
+<tr><td>JenkinsMaster</td><td>192.168.56.102</td><td>192.168.56.102:8080</td></tr>
+<tr><td>apache</td><td>192.168.56.103</td><td>　</td></tr>
+<tr><td>Zabbix</td><td>192.168.56.104</td><td>192.168.56.104/zabbix/dashboard.php</td></tr>
+<tr><td>git</td><td>192.168.56.105</td><td>192.168.56.105/git/</td></tr>
+<tr><td>Oracle</td><td>192.168.56.106</td><td>192.168.56.106:8080/apex/f?p=4950:1:5229812346957731::NO</td></tr>
+<tr><td>PostgreSQL</td><td>192.168.56.107</td><td>　</td></tr>
+<tr><td>tomcat</td><td>192.168.56.108</td><td>192.168.56.108:8080</td></tr>
+</tbody>
+</table>
 
 
-
-<!-- ------------------------------------------------------------------------------- -->
+<!--===============================================================================================================-->
 <h2>まとめ</h2>
 結論
 
+<!--===============================================================================================================-->
 <h2>CTA</h2>
 広告とか。。。
 
