インフラ情報追加

--- a/notTidyHpInfo/html/subpages001/pages/00_blog_sample.html
+++ b/notTidyHpInfo/html/subpages001/pages/00_blog_sample.html
@@ -26,6 +26,7 @@
 <img border="0" src="../../../images/test.png" >
 <h1>画像テスト(jpeg)</h1>
 <img border="0" src="../../../images/test.jpg" >
+<img border="0" src="../../../../images/subpages001/c003tab000_001.png" >
 
 <ul>
 <li> 前提として、CentOS6.5 の構築後の作業
@@ -72,13 +73,14 @@
 <h2>小見出し</h2>
 本文
 
+
+
+
 <!--===============================================================================================================-->
 <h2>まとめ</h2>
 結論
-
 <!--===============================================================================================================-->
 <h2>CTA</h2>
 広告とか。。。
-
 </body>
 </html>
