--- a/notTidyHpInfo/html/subpages001/readme.html
+++ b/notTidyHpInfo/html/subpages001/readme.html
@@ -54,13 +54,23 @@
 <li><a href="#c003tab000" onclick="ChangeTab('c003tab000'); return false;">ローカル環境構築例</a>
 <li><a href="#c003tab001" onclick="ChangeTab('c003tab001'); return false;">CentOSインストール</a>
 <li><a href="#c003tab002" onclick="ChangeTab('c003tab002'); return false;">gitサーバ構築</a>
-<li><a href="#c003tab002" onclick="ChangeTab('c003tab003'); return false;">CentOS6.5 Jenkins設定</a>
-<li><a href="#c003tab002" onclick="ChangeTab('c003tab004'); return false;">PostgreSQL構築</a>
-<li><a href="#c003tab002" onclick="ChangeTab('c003tab005'); return false;">　</a>
-<li><a href="#c003tab002" onclick="ChangeTab('c003tab006'); return false;">　</a>
-<li><a href="#c003tab002" onclick="ChangeTab('c003tab007'); return false;">　</a>
-<li><a href="#c003tab002" onclick="ChangeTab('c003tab008'); return false;">　</a>
-<li><a href="#c003tab002" onclick="ChangeTab('c003tab009'); return false;">　</a>
+<li><a href="#c003tab003" onclick="ChangeTab('c003tab003'); return false;">CentOS6.5 Jenkins設定</a>
+<li><a href="#c003tab004" onclick="ChangeTab('c003tab004'); return false;">PostgreSQL構築</a>
+<li><a href="#c003tab005" onclick="ChangeTab('c003tab005'); return false;">Oracle構築と運用</a>
+<li><a href="#c003tab006" onclick="ChangeTab('c003tab006'); return false;">VirtualBoxメモ</a>
+<li><a href="#c003tab007" onclick="ChangeTab('c003tab007'); return false;">CentOS7.0をVirtualBoxにインストールしてみる</a>
+<li><a href="#c003tab008" onclick="ChangeTab('c003tab008'); return false;">　</a>
+<li><a href="#c003tab009" onclick="ChangeTab('c003tab009'); return false;">　</a>
+<li><a href="#c003tab010" onclick="ChangeTab('c003tab010'); return false;">　</a>
+<li><a href="#c003tab011" onclick="ChangeTab('c003tab011'); return false;">　</a>
+<li><a href="#c003tab012" onclick="ChangeTab('c003tab012'); return false;">　</a>
+<li><a href="#c003tab013" onclick="ChangeTab('c003tab013'); return false;">　</a>
+<li><a href="#c003tab014" onclick="ChangeTab('c003tab014'); return false;">　</a>
+<li><a href="#c003tab015" onclick="ChangeTab('c003tab015'); return false;">　</a>
+<li><a href="#c003tab016" onclick="ChangeTab('c003tab016'); return false;">　</a>
+<li><a href="#c003tab017" onclick="ChangeTab('c003tab017'); return false;">　</a>
+<li><a href="#c003tab018" onclick="ChangeTab('c003tab018'); return false;">　</a>
+<li><a href="#c003tab019" onclick="ChangeTab('c003tab019'); return false;">　</a>
 </ul>
 </div><!-- <div id="category003"> -->
 </div><!-- <div id="nav"> -->
@@ -102,11 +112,21 @@
 <div id="c003tab002"><iframe src="./pages/c003/c003tab002.html" height="2999px"></iframe></div>
 <div id="c003tab003"><iframe src="./pages/c003/c003tab003.html" height="1999px"></iframe></div>
 <div id="c003tab004"><iframe src="./pages/c003/c003tab004.html" height="1999px"></iframe></div>
-<div id="c003tab005"><iframe src="./pages/c003/c003tab005.html" height="1999px"></iframe></div>
+<div id="c003tab005"><iframe src="./pages/c003/c003tab005.html" height="2999px"></iframe></div>
 <div id="c003tab006"><iframe src="./pages/c003/c003tab006.html" height="1999px"></iframe></div>
 <div id="c003tab007"><iframe src="./pages/c003/c003tab007.html" height="1999px"></iframe></div>
 <div id="c003tab008"><iframe src="./pages/c003/c003tab008.html" height="1999px"></iframe></div>
 <div id="c003tab009"><iframe src="./pages/c003/c003tab009.html" height="1999px"></iframe></div>
+<div id="c003tab010"><iframe src="./pages/c003/c003tab010.html" height="1999px"></iframe></div>
+<div id="c003tab011"><iframe src="./pages/c003/c003tab011.html" height="1999px"></iframe></div>
+<div id="c003tab012"><iframe src="./pages/c003/c003tab012.html" height="1999px"></iframe></div>
+<div id="c003tab013"><iframe src="./pages/c003/c003tab013.html" height="1999px"></iframe></div>
+<div id="c003tab014"><iframe src="./pages/c003/c003tab014.html" height="1999px"></iframe></div>
+<div id="c003tab015"><iframe src="./pages/c003/c003tab015.html" height="1999px"></iframe></div>
+<div id="c003tab016"><iframe src="./pages/c003/c003tab016.html" height="1999px"></iframe></div>
+<div id="c003tab017"><iframe src="./pages/c003/c003tab017.html" height="1999px"></iframe></div>
+<div id="c003tab018"><iframe src="./pages/c003/c003tab018.html" height="1999px"></iframe></div>
+<div id="c003tab019"><iframe src="./pages/c003/c003tab019.html" height="1999px"></iframe></div>
 </div><!-- <div id="category003"> -->
 <!--------------------------------------------------------------------------->
 </div><!-- <div id="content"> -->
@@ -147,6 +167,16 @@ function ChangeTab(tabname) {
 	   document.getElementById('c003tab007').style.display = 'none';
 	   document.getElementById('c003tab008').style.display = 'none';
 	   document.getElementById('c003tab009').style.display = 'none';
+	   document.getElementById('c003tab010').style.display = 'none';
+	   document.getElementById('c003tab011').style.display = 'none';
+	   document.getElementById('c003tab012').style.display = 'none';
+	   document.getElementById('c003tab013').style.display = 'none';
+	   document.getElementById('c003tab014').style.display = 'none';
+	   document.getElementById('c003tab015').style.display = 'none';
+	   document.getElementById('c003tab016').style.display = 'none';
+	   document.getElementById('c003tab017').style.display = 'none';
+	   document.getElementById('c003tab018').style.display = 'none';
+	   document.getElementById('c003tab019').style.display = 'none';
 	   // 指定箇所のみ表示
 	   document.getElementById(tabname).style.display = 'block';
 }
@@ -162,7 +192,7 @@ function ChangeCategory(categoryname) {
 //デフォルトのカテゴリを選択
 ChangeCategory('category003');
 //デフォルトのタブを選択
-ChangeTab('c003tab000');
+ChangeTab('c003tab007');
 </script>
 <!-- ------------------------------------------------------------------------------- -->
 </body>
