--- a/notTidyHpInfo/html/subpages001/pages/c003/c003tab000.html
+++ b/notTidyHpInfo/html/subpages001/pages/c003/c003tab000.html
@@ -37,7 +37,7 @@
 
 <!--===============================================================================================================-->
 <h2>全体構成</h2>
-<img border="0" src="../../../../images/c003tab000_001.png" >
+<img border="0" src="../../../../images/subpages001/pages/c003/c003tab000_001.png" >
 
 <!-- テーブル -->
 <table class="type07" width="50%">
