--- a/notTidyHpInfo/html/subpages001/readme.html
+++ b/notTidyHpInfo/html/subpages001/readme.html
@@ -58,9 +58,9 @@
 <li><a href="#c003tab004" onclick="ChangeTab('c003tab004'); return false;">PostgreSQL構築</a>
 <li><a href="#c003tab005" onclick="ChangeTab('c003tab005'); return false;">Oracle構築と運用</a>
 <li><a href="#c003tab006" onclick="ChangeTab('c003tab006'); return false;">VirtualBoxメモ</a>
-<li><a href="#c003tab007" onclick="ChangeTab('c003tab007'); return false;">CentOS7.0をVirtualBoxにインストールしてみる</a>
-<li><a href="#c003tab008" onclick="ChangeTab('c003tab008'); return false;">　</a>
-<li><a href="#c003tab009" onclick="ChangeTab('c003tab009'); return false;">　</a>
+<li><a href="#c003tab007" onclick="ChangeTab('c003tab007'); return false;">CentOS7.0をVirtualBoxにインストール</a>
+<li><a href="#c003tab008" onclick="ChangeTab('c003tab008'); return false;">CentOS7.0でJava8を確認</a>
+<li><a href="#c003tab009" onclick="ChangeTab('c003tab009'); return false;">CentOS7.0にMySQLを装備</a>
 <li><a href="#c003tab010" onclick="ChangeTab('c003tab010'); return false;">　</a>
 <li><a href="#c003tab011" onclick="ChangeTab('c003tab011'); return false;">　</a>
 <li><a href="#c003tab012" onclick="ChangeTab('c003tab012'); return false;">　</a>
