--- a/notTidyHpInfo/html/subpages002_ap/readme.html
+++ b/notTidyHpInfo/html/subpages002_ap/readme.html
@@ -19,17 +19,17 @@
 <div id="header">
 <h1>応用情報技術者試験</h1>
 <a href="#category000" onclick="ChangeCategory('category000'); return false;">はじめに</a>　
-<a href="#category001" onclick="ChangeCategory('category000'); return false;">第1章　基礎理論</a>　
-<a href="#category002" onclick="ChangeCategory('category001'); return false;">第2章　アルゴリズムとプログラミング</a>　
-<a href="#category003" onclick="ChangeCategory('category002'); return false;">第3章　ハードウェアとコンピュータ構成要素</a>　
-<a href="#category004" onclick="ChangeCategory('category003'); return false;">第4章　システム構成要素</a>　
-<a href="#category005" onclick="ChangeCategory('category004'); return false;">第5章　ソフトウェア</a>　
-<a href="#category006" onclick="ChangeCategory('category005'); return false;">第6章　データベース</a>　
-<a href="#category007" onclick="ChangeCategory('category006'); return false;">第7章　ネットワーク</a>　
-<a href="#category008" onclick="ChangeCategory('category007'); return false;">第8章　セキュリティ</a>　
-<a href="#category009" onclick="ChangeCategory('category008'); return false;">第9章　システム開発技術</a>　
-<a href="#category010" onclick="ChangeCategory('category009'); return false;">第10章　マネジメント</a>　
-<a href="#category011" onclick="ChangeCategory('category010'); return false;">第11章　ストラテジ</a>　
+<a href="#category001" onclick="ChangeCategory('category001'); return false;">第1章　基礎理論</a>　
+<a href="#category002" onclick="ChangeCategory('category002'); return false;">第2章　アルゴリズムとプログラミング</a>　
+<a href="#category003" onclick="ChangeCategory('category003'); return false;">第3章　ハードウェアとコンピュータ構成要素</a>　
+<a href="#category004" onclick="ChangeCategory('category004'); return false;">第4章　システム構成要素</a>　
+<a href="#category005" onclick="ChangeCategory('category005'); return false;">第5章　ソフトウェア</a>　
+<a href="#category006" onclick="ChangeCategory('category006'); return false;">第6章　データベース</a>　
+<a href="#category007" onclick="ChangeCategory('category007'); return false;">第7章　ネットワーク</a>　
+<a href="#category008" onclick="ChangeCategory('category008'); return false;">第8章　セキュリティ</a>　
+<a href="#category009" onclick="ChangeCategory('category009'); return false;">第9章　システム開発技術</a>　
+<a href="#category010" onclick="ChangeCategory('category020'); return false;">第10章　マネジメント</a>　
+<a href="#category011" onclick="ChangeCategory('category012'); return false;">第11章　ストラテジ</a>　
 </div>
 <!-- ヘッダ終了 -->
 <!-- ナビゲーション開始 -->
@@ -42,26 +42,19 @@
 <div id="category001">
 <ul>
 <li><B>1.1　数値変換とデータ表現</B>
-<li>
-<li>
-<li>1.1.3　負数の表現
-<li>1.1.4　あふれ(オーバーフロー)
-<li>1.1.5　固定小数点数表現
-<li>1.1.6　浮動小数点表現
-<li>1.1.7　誤差
   <ul>
   <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;">1.1.1　r進法</a>
-  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;">1.1.2　正の整数の表現</a>
-  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
-  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
-  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
-  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
-  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
-  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
-  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
-  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
-  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
-  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab002'); return false;">1.1.2　正の整数の表現</a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab003'); return false;">1.1.3　負数の表現</a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab004'); return false;">1.1.4　あふれ(オーバーフロー)</a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab005'); return false;">1.1.5　固定小数点数表現</a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab006'); return false;">1.1.6　浮動小数点表現</a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab007'); return false;">1.1.7　誤差</a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab008'); return false;"></a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab009'); return false;"></a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab010'); return false;"></a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab011'); return false;"></a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab012'); return false;"></a>
   </ul>
 <li>1.2　集合と論理
 	<ul>
