インフラ設定追加

--- a/notTidyHpInfo/html/subpages001/pages/00_blog_sample.html
+++ b/notTidyHpInfo/html/subpages001/pages/00_blog_sample.html
@@ -10,7 +10,6 @@
 <body>
 最終更新日付：2016/11/26（土）
 <h1>タイトル</h1>
-
 <!--
 <ul>
 <li>全体サイズとしては3000文字が目安
@@ -63,18 +62,27 @@
 
 <!--===============================================================================================================-->
 <h2>小見出し</h2>
-本文
+<ul>
+<li>
+<pre class="brush: bash;">
+</pre>
+</ul>
 
 <!--===============================================================================================================-->
 <h2>小見出し</h2>
-本文
+<ul>
+<li>
+<pre class="brush: bash;">
+</pre>
+</ul>
 
 <!--===============================================================================================================-->
 <h2>小見出し</h2>
-本文
-
-
-
+<ul>
+<li>
+<pre class="brush: bash;">
+</pre>
+</ul>
 
 <!--===============================================================================================================-->
 <h2>まとめ</h2>
